<resources>
    <string name="app_name">NYTimesNews</string>
    <string name="search_title">Search</string>
    <string name="settings_title">Settings</string>

    <!--Modal Settings-->
    <string name="content_title">Test</string>
    <string name="positive_button">Save</string>
    <string name="negative_button">Cancel</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="new_desk">News Desk Values</string>

    <!---->
    <string name="arts">Arts</string>
    <string name="fashion_style">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="thumbnail">Thumbnail</string>

</resources>
